--- a/main.html
+++ b/main.html
@@ -4,10 +4,22 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Portfolio</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>Rahul</h1>
+		<img src="https://images.unsplash.com/photo-1705594125987-343e11860a20?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Profile Pic">
+	<br>
+		<a href="https://www.linkedin.com/in/rahul-chauhan-11230a265/">My linkedin profile</a>
+		<section  id="skills">
+				<li>Skills</li>
+		</section>
+			<section  id="projects">
+				<ul>
+					<li>Projects</li>
+				</ul>
+			</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
